# algorand-verification

./: .gitattributes  .gitignore  LICENSE.md  Makefile  Makefile.coq.local  README.md  _CoqProject  coq-algorand.opam  dune-project  index.html  meta.yml  opam
.github/workflows/: coq-ci.yml  docker-action.yml
docs/: latest
docs/release-1.3/coq2html/: Algorand.algorand_model.html  Algorand.fmap_ext.html  Algorand.liveness.html  Algorand.quorums.html  Algorand.safety.html  Algorand.safety_helpers.html  Algorand.test.html  Algorand.test2.html  Algorand.zify.html
docs/release-1.4/coq2html/: Algorand.algorand_model.html  Algorand.fmap_ext.html  Algorand.liveness.html  Algorand.quorums.html  Algorand.safety.html  Algorand.safety_helpers.html  coq2html.css
report/: .gitignore  background.tex  bib.bib  comment.cut  conclusion.tex  introduction.tex  lstcoq.sty  model.tex  report.tex  safety.tex
resources/: index.md
scripts/: extract_record_notation.py
theories/: GlobalState.v  GlobalState.v.rec  R_util.v  Rstruct.v  algorand_model.v  base.v  dune  fmap_ext.v  global_state.v  global_state.v.rec  lemmas.md  liveness.v  local_state.v  local_state.v.rec  quorums.v  reals.v  safety.v  safety_helpers.v  zify.v
