opam-version: "2.0"
version: "dev"
maintainer: "palmskog@gmail.com"

homepage: "https://github.com/runtimeverification/algorand-verification"
dev-repo: "git+https://github.com/runtimeverification/algorand-verification.git"
bug-reports: "https://github.com/runtimeverification/algorand-verification/issues"
license: "NCSA"

synopsis: "A verified model of Algorand in Coq"
description: """
Algorand is a consensus protocol that provides the foundation for a
decentralized digital currency and transactions platform.
This is a formal model of Algorand in Coq, expressed
as a transition system over global states in a distributed system.
Included is a full formal proof of safety for the transition system.
"""

build: [make "-j%{jobs}%"]
install: [make "install"]
depends: [
  "ocaml"
  "coq" {>= "8.11" & < "8.12~"}
  "coq-mathcomp-ssreflect" {>= "1.11" & < "1.12~"}
  "coq-mathcomp-algebra"
  "coq-mathcomp-finmap" {>= "1.5"}
  "coq-mathcomp-analysis" {>= "0.3.1"}
  "coq-interval"
]

tags: [
  "category:Computer Science/Concurrent Systems and Protocols/Theory of concurrent systems"
  "keyword:distributed algorithms"
  "keyword:algorand"
  "logpath:Algorand"
]
authors: [
  "Musab Alturki"
  "Jing Chen"
  "Victor Luchangco"
  "Brandon Moore"
  "Karl Palmskog"
  "Lucas Peña"
  "Grigore Rosu"
]
