opam-version: "2.0"
maintainer: "palmskog@gmail.com"
version: "dev"

homepage: "https://github.com/runtimeverification/algorand-verification"
dev-repo: "git+https://github.com/runtimeverification/algorand-verification.git"
bug-reports: "https://github.com/runtimeverification/algorand-verification/issues"
license: "NCSA"

synopsis: "A verified model of the Algorand consensus protocol in Coq"
description: """
The Algorand consensus protocol is the foundation of a decentralized
digital currency and transactions platform. This project provides a
model of the protocol in Coq, expressed as a transition system over
global states in a message-passing distributed system. Included is
a formal proof of safety for the transition system."""

build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "dune" {>= "2.5"}
  "coq" {>= "8.12" & < "8.13~"}
  "coq-mathcomp-ssreflect" {>= "1.11" & < "1.12~"}
  "coq-mathcomp-algebra" 
  "coq-mathcomp-finmap" {>= "1.5"}
  "coq-mathcomp-analysis" {>= "0.3.2"}
  "coq-record-update" 
]

tags: [
  "category:Computer Science/Concurrent Systems and Protocols/Theory of concurrent systems"
  "keyword:distributed algorithms"
  "keyword:blockchain"
  "keyword:consensus"
  "keyword:algorand"
  "logpath:Algorand"
]
authors: [
  "Musab A. Alturki"
  "Jing Chen"
  "Victor Luchangco"
  "Brandon Moore"
  "Karl Palmskog"
  "Lucas Peña"
  "Grigore Roșu"
]
